--- a/bt2.html
+++ b/bt2.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
+
 <body>
-$END$
+
+<
+<script>
+    let value = prompt("Enter a number: ");
+    let en = ["dog","car","hi"];
+    let vn = ["cho", "o to", "chao"];
+    let tb='f'
+    for (let i = 0; i < en.length; i++) {
+        if (value == en[i]) {
+                alert(vn[i]);
+                tb='t';
+break;
+
+            }
+
+        }
+    if (tb == 'f') {
+        alert(" khoong co")
+    }
+
+</script>
 </body>
 </html>
